tests/syntax_error/two_dots.jou
# This is a bit of a weird error. It needs to be special-cased in the
# tokenizer because of how the ungetc() function works.
..  # Error: there cannot be two consecutive dots (should be one dot, or three dots for '...')
